--- a/src/index.css
+++ b/src/index.css
@@ -129,6 +129,7 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
+    touch-action: manipulation;
   }
 
   h1, h2, h3, h4, h5, h6 {
@@ -141,9 +142,15 @@
     max-width: 100vw;
   }
 
-  /* Improve tap targets for mobile */
-  button, a {
+  /* Improve tap targets for mobile and prevent zoom */
+  button, a, input, textarea {
     -webkit-tap-highlight-color: transparent;
+    touch-action: manipulation;
+  }
+
+  /* Prevent iOS double-tap zoom */
+  * {
+    touch-action: manipulation;
   }
 }
 
