--- a/src/index.css
+++ b/src/index.css
@@ -240,6 +240,24 @@
     height: auto;
   }
 
+  .sfumatura-semplice {
+    display: inline-block;
+  }
+
+  /* Creiamo un "velo" sopra l'immagine con le ombre */
+  .sfumatura-semplice::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    /* Due ombre: una sopra e una sotto */
+    box-shadow:
+      inset 0 110px 20px 0 hsl(var(--background)),
+      inset 0 -30px 20px 0 hsl(var(--background));
+  }
+
   /* Safe area for notched devices */
   @supports (padding: max(0px)) {
     .safe-area-inset {
